[package]
name = "wgpu_image_renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# 使用最新的稳定版 24.0
wgpu = { version = "24.0", features = ["webgpu"] }
bytemuck = { version = "1.16", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Navigator", "Window", "HtmlCanvasElement"] }
# 用于处理异步回调
futures-intrusive = "0.5"